Fix: Exclude large thermal data files from Git tracking
- Add .gitignore rules for two 327MB thermal force data files
- Remove files from Git tracking (kept locally for simulation)
- Update session log structure with complete records
- Files are required for simulation but exceed GitHub 100MB limit

Affected files:
- Thermal Force all XYZ Gly DampInc 10sec,10sec,10sec 100000SplRate (SI unit).txt
- Thermal Force all XYZ Water DampInc 10sec,10sec,10sec 100000SplRate (SI unit).txt

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ Backup/
 # as we're unsure which are input data vs output results
 # All .txt files will be tracked by Git
 
+# Large thermal data files (> 100MB, exceeds GitHub limit)
+**/Thermal Force all XYZ Gly DampInc 10sec,10sec,10sec 100000SplRate (SI unit).txt
+**/Thermal Force all XYZ Water DampInc 10sec,10sec,10sec 100000SplRate (SI unit).txt
+
 # Upgrade logs
 UpgradeLog*.htm
 UpgradeLog*.XML
