Enable inverse model test with optimized output and error handling

--- a/.gitignore
+++ b/.gitignore
@@ -31,13 +31,19 @@ Backup/
 # as we're unsure which are input data vs output results
 # All .txt files will be tracked by Git
 
+# Exception: Ignore duplicate thermal force data files (already have originals)
+jul3_2014_motioncontrol_hallsensor_akf_ar2/Thermal Force all XYZ Gly DampInc 10sec,10sec,10sec 100000SplRate (SI unit).txt
+jul3_2014_motioncontrol_hallsensor_akf_ar2/Thermal Force all XYZ Water DampInc 10sec,10sec,10sec 100000SplRate (SI unit).txt
+
 # Upgrade logs
 UpgradeLog*.htm
 UpgradeLog*.XML
 _UpgradeReport_Files/
 
-# VS Code
-.vscode/
+# VS Code (ignore user-specific files, but track settings)
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
 
 # JetBrains
 .idea/
